--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-cookie": "^7.2.2",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.13.1",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "20",
